QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

SVN TRUNK

- A significant UI layout has been made: the Messages and
  Status widgets were merged into one, giving space to the
  brand new Session wigdet to be easy accessible from the
  main panel control window.

- libX11 is now being added explicitly to the build link
  phase, as seen necessary on some bleeding-edge distros
  eg. Fedora 13, Debian 6. (closing bug #3050915).

- Input/Output latency options were missing but now finally
  enabled for the firewire back-end.

- General standard dialog buttons layout is now in place.

- Avoid pre-loading a stalled patchbay definition filename
  and its nagging error on startup (fixes bug #3017078).

- Client connection retrial logic scrapped. Being a leftover
  from early ages, when machines were slower and JACK server
  startup times were longer... now, if it can't connect first
  time as client, it will tear down the server whether it's
  starting up still or not at all. (cf. Setup/Settings/Start
  Delay for the rescue).

- Server name is finally part of the server settings presets,
  thanks to Fons Adriaensen for the heads-up. (EXPERIMENTAL)

- As a workaround regarding issues switching jack2's backends,
  Robin Gareus sends us yet another D-Bus metho slot: "preset",
  (dbus-send --system / org.rncbc.qjackctl.preset string:PRESET).
  Thanks again.

- Another D-Bus interface slot makes it through implementation:
  "quit" (eg. usage: dbus-send --system / org.rncbc.qjackctl.quit).
  Besides, there's also these new JACK session management actions
  which were being overlooked as well: "load", "save", "savequit"
  and "savetemplate" are also available as D-Bus method slots.

- Make sure that Patchbay socket names are unique when adding
  or copying, fixing previous patch by Dominic Sacre.

- JACK version is now being shown on the About box (jack2).
