@@ -47,6 +47,7 @@
         <file>images/displaybg1.png</file>
         <file>images/down1.png</file>
         <file>images/edit1.png</file>
+        <file>images/expandall1.png</file>
         <file>images/forward1.png</file>
         <file>images/error1.png</file>
         <file>images/mclienti.png</file>
